--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/cookie": "^11.0.1",
+    "@clerk/fastify": "^2.0.11",
     "@libsql/client": "^0.14.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -28,6 +28,7 @@
     "eslint-config-xo": "^0.46.0",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "pino-pretty": "^12.0.0"
   }
 }
