--- a/package.json
+++ b/package.json
@@ -6,20 +6,32 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "echo broken #nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/react": "^3.1.1",
     "@clerk/fastify": "^2.0.11",
+    "@clerk/remix": "^4.2.51",
     "@libsql/client": "^0.14.0",
+    "@mcansh/remix-fastify": "^4.0.1",
+    "@remix-run/dev": "^2.14.0",
+    "@remix-run/node": "^2.14.0",
+    "@remix-run/react": "^2.14.0",
+    "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.36.0",
     "fastify": "^5.1.0",
-    "fastify-plugin": "^5.0.1"
+    "fastify-plugin": "^5.0.1",
+    "isbot": "^4",
+    "lucide-react": "^0.456.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "vite": "^5.4.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
