--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.1.1",
     "@clerk/fastify": "^2.0.11",
+    "@clerk/localizations": "^3.6.4",
     "@clerk/remix": "^4.2.51",
     "@libsql/client": "^0.14.0",
     "@mcansh/remix-fastify": "^4.0.1",
@@ -27,10 +28,12 @@
     "drizzle-orm": "^0.36.0",
     "fastify": "^5.1.0",
     "fastify-plugin": "^5.0.1",
+    "i18next": "^23.16.5",
     "isbot": "^4",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "vite": "^5.4.11"
   },
   "devDependencies": {
